# omnipaxos

./: Cargo.toml  check.sh  deny.toml  justfile
examples/dashboard/: Cargo.toml
examples/dashboard/src/: main.rs
examples/kv_store/: Cargo.toml
examples/kv_store/src/: main.rs
omnipaxos/: Cargo.toml
omnipaxos/src/: ballot_leader_election.rs  lib.rs  messages.rs  omni_paxos.rs  util.rs
omnipaxos/src/sequence_paxos/: follower.rs  leader.rs  mod.rs
omnipaxos/src/storage/: internal_storage.rs  mod.rs
omnipaxos/src/unicache/: lru_cache.rs  mod.rs
omnipaxos/src/utils/: mod.rs  ui.rs
omnipaxos/tests/: consensus_test.rs  docs_integration.rs  reconfig_test.rs  reconnect_test.rs  snapshot_test.rs  trim_test.rs  utils.rs
omnipaxos_macros/: Cargo.toml
omnipaxos_storage/: Cargo.toml
omnipaxos_storage/src/: memory_storage.rs  persistent_storage.rs
omnipaxos_ui/: Cargo.toml
omnipaxos_ui/src/: app.rs  lib.rs  render.rs
