[workspace]
resolver = "2"
members = [
    "omnipaxos",
    "omnipaxos_storage",
    "omnipaxos_macros",
    "omnipaxos_ui",
    "examples/kv_store",
    "examples/dashboard",
]

[workspace.dependencies]
omnipaxos = { path = "omnipaxos" }
omnipaxos_macros = { path = "omnipaxos_macros" }
omnipaxos_storage = { path = "omnipaxos_storage" }
omnipaxos_ui = { path = "omnipaxos_ui" }

bincode = "1.3.3"
kompact = { version = "0.11.3" }
linked_hash_set = { version = "0.1.4" }
lru = { version = "0.11.0" }
num-traits = { version = "0.2.16" }
rand = "0.8.4"
rocksdb = "0.21.0"
serde = { version = "1.0" }
serde_json = "1.0"
serial_test = "3.2.0"
tempfile = "3.3.0"
tokio = { version = "1" }
toml = { version = "0.7.3"}
tracing = { version = "0.1" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zerocopy = "0.6.1"

[profile.release]
lto = true
