[workspace]
resolver = "2"
members = [
    "omnipaxos",
    "omnipaxos_storage",
    "omnipaxos_macros",
    "omnipaxos_ui",
    "examples/kv_store",
    "examples/dashboard",
]

[workspace.dependencies]
omnipaxos = { path = "omnipaxos" }
omnipaxos_macros = { path = "omnipaxos_macros" }
omnipaxos_storage = { path = "omnipaxos_storage" }
omnipaxos_ui = { path = "omnipaxos_ui" }

bincode = "1.3.3"
kompact = { version = "0.11" }
linked_hash_set = { version = "0.1" }
lru = { version = "0.12" }
num-traits = { version = "0.2" }
rand = "0.8"
rocksdb = "0.23"
serde = { version = "1" }
serde_json = "1"
serial_test = "3.2"
tempfile = "3.3"
thiserror = { version = "2"}
tokio = { version = "1" }
toml = { version = "0.8"}
tracing = { version = "0.1" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zerocopy = "0.6"

[profile.release]
lto = true
