[package]
name = "omnipaxos"
version = "0.2.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "A distributed log library written in Rust"
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
omnipaxos_macros = { workspace = true, optional = true }

linked_hash_set = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
omnipaxos_storage = { workspace = true }

kompact = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
toml = { workspace = true }
tempfile = {  workspace = true }
serial_test = { workspace = true}
rand = { workspace = true }

[features]
logging  = ["tracing"]
toml_config = ["serde", "toml"]
macros = ["omnipaxos_macros"]
unicache = ["lru", "num-traits", "linked_hash_set"]

default = ["macros"]
