[package]
name = "omnipaxos_storage"
version = "0.2.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "Storage implementations for OmniPaxos."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
omnipaxos = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
zerocopy = { workspace = true }
rocksdb = { workspace = true }
