[package]
name = "kv_store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos = { workspace = true, features = ["macros"] }
omnipaxos_storage = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { workspace = true, features = ["derive"] }